yaml/ubooquity/04-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ubooquity
  labels:
    app.kubernetes.io/name: ubooquity
    app.kubernetes.io/instance: ubooquity
    app: ubooquity
spec:
  type: ClusterIP
  ports:
    - port: 2202
      targetPort: http
      protocol: TCP
      name: http
    - port: 2203
      targetPort: http
      protocol: TCP
      name: http-admin
  selector:
    app: ubooquity
