yaml/ubooquity/06-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ubooquity
  labels:
    app: ubooquity
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.frontend.redirect.permanent: "true"
    traefik.ingress.kubernetes.io/frontend-entry-points: http, https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  ingressClassName: traefik-lb
  tls:
    - hosts:
        - "books.shpaq.org"
      secretName: books-shpaq-org-tls
  rules:
    - host: "books.shpaq.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                  name: ubooquity
                  port:
                    number: 2202
