yaml/ubooquity/07-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ubooquity
  labels:
    app.kubernetes.io/name: ubooquity
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    #kubernetes.io/ingress.class: traefik
    traefik.frontend.redirect.permanent: "true"
    traefik.ingress.kubernetes.io/frontend-entry-points: http, https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  ingressClassName: traefik-lb
  tls:
    - hosts:
        - "books.shpaq.org"
      secretName: books-shpaq-org-tls
  rules:
    - host: "books.shpaq.org"
      http:
        paths:
          - path: /
            backend:
              serviceName: ubooquity
              servicePort: 2202
